Prevent wrapping in objects/characters list
The same way as RAGS does.

--- a/src/regalia/css/custom.css
+++ b/src/regalia/css/custom.css
@@ -353,6 +353,8 @@ body {
 
 .RoomObjects, .VisibleCharacters {
     padding: 2px;
+    white-space: nowrap;
+    overflow: visible;
 }
 
 .no-actions {
